# super-wingpanel

./: AUTHORS  CMakeLists.txt  COPYRIGHT  INSTALL  config.h.cmake  org.pantheon.desktop.super-wingpanel.gschema.xml
cmake/: ValaPrecompile.cmake
data/: super-wingpanel.desktop
debian/: changelog  control  rules
po/: CMakeLists.txt  af.po  am.po  ar.po  be.po  bg.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  fy.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  lt.po  lv.po  ml.po  ms.po  nb.po  nl.po  (+25 more)
src/: HideManager.vala  PanelController.vala  PositionManager.vala  WindowManager.vala  WingpanelApp.vala
src/Drawing/: AnimatedRenderer.vala  PanelRenderer.vala
src/Indicator/: IndicatorFactory.vala  IndicatorFileModel.vala  IndicatorIface.vala  IndicatorLoader.vala  IndicatorObject.vala  IndicatorObjectEntry.vala
src/Services/: AppLauncherService.vala  IndicatorSorter.vala  LauncherRunner.vala  Matcher.vala  Settings.vala  WMSettings.vala
src/Widgets/: AppButtonWindow.vala  AppsButton.vala  IndicatorButton.vala  IndicatorMenubar.vala  IndicatorWidget.vala  MenuBar.vala  PanelShadow.vala  PrimaryWindow.vala  StyleClass.vala  WindowIface.vala
vapi/: config.vapi  indicator3-0.4.vapi
